--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 .card {
   padding: 10px;
+  margin: 10px;
 }
 
 img {
@@ -13,4 +14,21 @@ img {
 
 .btn-history {
   margin: 5px;
+}
+
+body {
+  background-color: peachpuff;
+}
+
+#today {
+  background-color: blue;
+}
+
+#weather {
+  background-color: lightblue;
+}
+
+.card-forecast {
+  background-color: red;
+  color: white;
 }
